# awesome-rabbit

./: .gitignore  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/: dependabot.yml
.github/workflows/: semgrep.yml
agents/: cost-optimizer.md  scheduled-query-pricing-optimizer.md
assessment-cli/: .gitignore  README.md  pyproject.toml  rabbit_assess.py  requirements-dev.txt  requirements.txt
assessment-cli/bash/: README.md  bundle.sh  rabbit-assess.sh
assessment-cli/src/rabbit_assessment/: __init__.py  __main__.py  auth.py  categories.py  cli.py  collector.py  config.py  models.py  pricing.py  report.py  runner.py  scope.py  sql.py  writers.py
assessment-cli/src/rabbit_assessment/sql_templates/: capacity_commitments.sql  failed_jobs_capacity.sql  failed_jobs_general.sql  pricing_model_optimization.sql  reservation_waste.sql  reservations.sql  storage_billing_model.sql
assessment-cli/tests/: test_pricing.py  test_runner.py  test_scope.py  test_sql_render.py
assessment/bigquery-reservation-planner/: README.md  (+2 more)
bq-backup-and-restore/: .gitignore  README.md  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
bq-proxy/: README.md
bq-reverse-proxy/: README.md
bq-scheduled-query-pricing-optimizer/: README.md
followrabbit-cli/: README.md
gcs-insights-and-usage-logs/: README.md  report_bucket.tf  storage_insights.tf  usage_logs.tf  variables.tf
vpc-sc-helper/: README.md  rabbit-vpcsc-helper.sh
(+37 files in other folders)
